# fix_owner

./: README.md  README_TESTING.md  mike.md  pyproject.toml  requirements.txt
.kiro/specs/fix-owner-script/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
old/: fix_owner_1.py  output_integration_example.py  spec_fix_owner.md  spec_fix_owner_1.md  timeout_integration_example.py
output/: sid_orphaned_remediation_20250804_131601.yaml  sid_orphaned_remediation_20250804_153929.yaml  sid_orphaned_remediation_unknown_time.yaml  sid_ownership_analysis_20250804_131601.json  sid_ownership_analysis_20250804_153929.json  sid_ownership_analysis_unknown_time.json
src/: __init__.py  common.py  error_manager.py  filesystem_walker.py  fix_owner.py  output_manager.py  security_manager.py  sid_tracker.py  stats_tracker.py  timeout_manager.py
tests/: test_all_core_functionality.py  test_argument_parsing.py  test_common_utilities.py  test_coverage_boost.py  test_error_integration.py  test_error_manager.py  test_failed_files_logging.py  test_filesystem_walker.py  test_integration.py  test_output_directory_functionality.py  test_output_manager.py  test_security_manager.py  test_sid_tracker.py  test_stats_tracker.py  test_timeout_manager.py  test_yaml_remediation.py
